--- a/main/resources/view/Deductions.fxml
+++ b/main/resources/view/Deductions.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #16a085;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DeductionsController">
+<AnchorPane prefHeight="647.0" prefWidth="765.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DeductionsController">
 
     <children>
 
@@ -28,26 +28,15 @@
             <children>
 
 
-                <HBox spacing="10.0">
-                    <children>
-                        <Label minWidth="100" text="Deduction ID" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                        <TextField fx:id="txtDeductionId" prefWidth="200" />
-                    </children>
-                </HBox>
+                <HBox spacing="10.0" />
 
 
-                <HBox spacing="10.0">
-                    <children>
-                        <Label minWidth="100" text="Deduction Name" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                        <TextField fx:id="txtDeductionName" prefWidth="200" promptText=" " />
-                    </children>
-                </HBox>
+                <HBox spacing="10.0" />
+                  <Label minWidth="100" text="Deduction ID" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
 
 
                 <HBox alignment="CENTER_LEFT" spacing="10.0" />
@@ -55,25 +44,25 @@
         </VBox>
 
 
-        <TableView fx:id="tblDeductions" layoutX="20.0" layoutY="198.0" prefHeight="182.0" prefWidth="560.0">
+        <TableView fx:id="tblDeductions" layoutX="20.0" layoutY="240.0" prefHeight="299.0" prefWidth="732.0">
             <columns>
-                <TableColumn fx:id="colDeductionId" prefWidth="200.0" text="Deduction ID" />
-                <TableColumn fx:id="colDeductionName" prefWidth="350.0" text="Deduction Name" />
+                <TableColumn fx:id="colDeductionId" prefWidth="168.66668701171875" text="Deduction ID" />
+                <TableColumn fx:id="colDeductionName" prefWidth="381.3332824707031" text="Deduction Name" />
             </columns>
         </TableView>
-            <Button fx:id="btnAdd" layoutX="25.0" layoutY="145.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #ffeaa7;" text="Add">
+            <Button fx:id="btnAdd" layoutX="20.0" layoutY="184.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #ffeaa7;" text="Add">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-            <Button fx:id="btnUpdate" layoutX="119.0" layoutY="146.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #00cec9;" text="Update">
+            <Button fx:id="btnUpdate" layoutX="120.0" layoutY="184.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #00cec9;" text="Update">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-            <Button fx:id="btnDelete" layoutX="214.0" layoutY="146.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #ff7675;" text="Delete">
+            <Button fx:id="btnDelete" layoutX="215.0" layoutY="184.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #ff7675;" text="Delete">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-            <Button fx:id="btnClear" layoutX="308.0" layoutY="146.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #fab1a0;" text="Clear">
+            <Button fx:id="btnClear" layoutX="309.0" layoutY="184.0" prefHeight="25.0" prefWidth="83.0" style="-fx-background-color: #b2bec3;" text="Reset">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -82,6 +71,13 @@
             <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
          </image>
       </ImageView>
+            <TextField fx:id="txtDeductionName" layoutX="120.0" layoutY="113.0" prefWidth="200" promptText=" " />
+            <Label layoutX="20.0" layoutY="117.0" minWidth="100" text="Deduction Name" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+            <TextField fx:id="txtDeductionId" layoutX="117.0" layoutY="71.0" prefWidth="200" />
 
     </children>
 
