--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -1,19 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
+<AnchorPane prefHeight="600" prefWidth="1273.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="-2.6666666666666665" layoutY="14.0" prefHeight="380.0" prefWidth="754.0" spacing="15.0" style="-fx-background-color: #E8F5E9;" AnchorPane.bottomAnchor="136.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="10.0">
-         <padding>
-            <Insets left="5.0" right="5.0" />
-         </padding>
+      <VBox prefHeight="580.0" prefWidth="947.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="-157.0" AnchorPane.topAnchor="10">
+         <padding><Insets bottom="10" left="10" right="10" top="10" /></padding>
+
+         <!-- Title -->
+         <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Management System" textFill="WHITE" />
+
+         <!-- Grid Form -->
+         <GridPane hgap="10" vgap="10">
+            <columnConstraints>
+               <ColumnConstraints halignment="RIGHT" minWidth="120" />
+               <ColumnConstraints minWidth="200" />
+            </columnConstraints>
+
+            <!-- Input Fields -->
+            <children>
+               <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtEmpId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+               <Label text="First Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+               <Label text="Last Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+               <Label text="Department ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtDeptId" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+               <Label text="Date of Birth:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <DatePicker fx:id="dateDOB" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+               <Label text="Address:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtAddress" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+               <Label text="Join Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="6">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <DatePicker fx:id="dateJoinDate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+
+               <Label text="Age:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="7">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtAge" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+               <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="8">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+
+               <Label text="Contact:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="9">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtContact" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
+               <Label text="Position ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="10">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font></Label>
+               <TextField fx:id="txtPositionId" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            </children>
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
+         </GridPane>
+
+         <!-- Button Controls -->
+         <HBox alignment="CENTER" spacing="10">
+            <Button fx:id="btnSave" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btnUpdate" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btnDelete" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="btnClear" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+         </HBox>
+
+         <!-- TableView -->
+         <TableView fx:id="tblEmployees" prefHeight="80.0" prefWidth="945.0">
+            <columns>
+               <TableColumn fx:id="colEmpId" prefWidth="66.00000190734863" text="Emp ID" />
+               <TableColumn fx:id="colFirstName" prefWidth="93.99999237060547" text="First Name" />
+               <TableColumn fx:id="colLastName" prefWidth="132.6666717529297" text="Last Name" />
+               <TableColumn fx:id="colDeptId" prefWidth="59.3333740234375" text="Dept ID" />
+               <TableColumn fx:id="colDOB" prefWidth="84.0" text="DOB" />
+               <TableColumn fx:id="colAddress" prefWidth="110.66665649414062" text="Address" />
+               <TableColumn fx:id="colJoinDate" prefWidth="100.66668701171875" text="Join Date" />
+               <TableColumn fx:id="colAge" prefWidth="60.66656494140625" text="Age" />
+               <TableColumn fx:id="colEmail" prefWidth="145.33331298828125" text="Email" />
+               <TableColumn fx:id="colContact" minWidth="0.0" prefWidth="132.0" text="Contact" />
+               <TableColumn fx:id="colPositionId" prefWidth="97.33331298828125" text="Position ID" />
+            </columns>
+            <cursor>
+               <Cursor fx:constant="CROSSHAIR" />
+            </cursor>
+         </TableView>
       </VBox>
    </children>
-   <padding>
-      <Insets left="10.0" right="10.0" top="5.0" />
-   </padding>
 </AnchorPane>
