--- a/main/resources/view/Employee_Equipment.fxml
+++ b/main/resources/view/Employee_Equipment.fxml
@@ -12,8 +12,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.Employee_EquipmentController">
+<AnchorPane prefHeight="472.0" prefWidth="717.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.Employee_EquipmentController">
 
     <children>
         <VBox alignment="TOP_CENTER" layoutX="50.0" layoutY="30.0" prefWidth="500" spacing="20.0">
@@ -21,7 +22,7 @@
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Equipment Assignment" />
+            <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Equipment Assignment" textFill="WHITE" />
 
             <GridPane hgap="10" vgap="15">
                 <columnConstraints>
@@ -35,13 +36,22 @@
                     <RowConstraints />
                 </rowConstraints>
 
-                <Label text="Assignment ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label text="Assignment ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
                 <TextField fx:id="txtAssignmentId" promptText="EQA001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Employee ID:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
                 <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Equipment ID:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Label text="Equipment ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
                 <TextField fx:id="txtEquipmentId" promptText="EQP001" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </GridPane>
 
@@ -52,10 +62,10 @@
                 <Button fx:id="btnClear" prefWidth="100" text="Clear" />
             </HBox>
         </VBox>
-      <TableView layoutX="14.0" layoutY="272.0" prefHeight="200.0" prefWidth="559.0">
+      <TableView layoutX="14.0" layoutY="272.0" prefHeight="200.0" prefWidth="693.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn prefWidth="104.6666898727417" text="Assignment ID" />
+          <TableColumn prefWidth="247.33329010009766" text="C2" />
         </columns>
       </TableView>
     </children>
