--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -16,9 +16,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600" prefWidth="1273.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
+<AnchorPane prefHeight="607.0" prefWidth="1273.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
    <children>
-      <VBox prefHeight="580.0" prefWidth="947.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="-157.0" AnchorPane.topAnchor="10">
+      <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="629.0" prefWidth="1280.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="-20.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-2.0">
          <padding><Insets bottom="10" left="10" right="10" top="10" /></padding>
 
          <!-- Title -->
@@ -37,7 +37,7 @@
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmpId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+               <TextField fx:id="txtEmpId" prefHeight="25.0" prefWidth="401.0" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                <Label text="First Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                   <font>
