--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -85,7 +85,7 @@
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmail" onAction="#emailOnAction" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
                <Label text="Contact:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="9">
                   <font>
