--- a/main/resources/view/Positions.fxml
+++ b/main/resources/view/Positions.fxml
@@ -1,53 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.PositionsController"
-            prefHeight="500.0" prefWidth="700.0">
+<AnchorPane prefHeight="534.0" prefWidth="877.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.PositionsController">
 
     <children>
-        <VBox spacing="20" alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefWidth="660.0">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="514.0" prefWidth="849.0" spacing="20">
             <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
+                <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="Manage Positions" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Manage Positions" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
 
-            <!-- Input Form -->
+
             <GridPane hgap="10" vgap="15">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT"/>
-                    <ColumnConstraints prefWidth="300"/>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="Position ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtPositionId" promptText="POS001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Label text="Position ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtPositionId" prefHeight="25.0" prefWidth="447.0" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Position Title:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtPositionTitle" promptText="e.g. Software Engineer" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <Label text="Position Title:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtPositionTitle" prefHeight="25.0" prefWidth="397.0" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Salary Grade:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtSalaryGrade" promptText="e.g. Grade A" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <Label text="Salary Grade:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtSalaryGrade" promptText="e.g. Grade A" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
 
-            <!-- Button Controls -->
-            <HBox spacing="15" alignment="CENTER">
-                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
-                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
-                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
-                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
 
-            <!-- Table View -->
+
             <TableView fx:id="tblPositions" prefHeight="250" prefWidth="650">
                 <columns>
-                    <TableColumn fx:id="colPositionId" text="Position ID" prefWidth="150"/>
-                    <TableColumn fx:id="colPositionTitle" text="Position Title" prefWidth="250"/>
-                    <TableColumn fx:id="colSalaryGrade" text="Salary Grade" prefWidth="150"/>
+                    <TableColumn fx:id="colPositionId" prefWidth="154.66668319702148" text="Position ID" />
+                    <TableColumn fx:id="colPositionTitle" prefWidth="343.99998474121094" text="Position Title" />
+                    <TableColumn fx:id="colSalaryGrade" prefWidth="310.0" text="Salary Grade" />
                 </columns>
             </TableView>
         </VBox>
