--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -1,69 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController"
-            prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="677.0" prefWidth="1272.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController">
 
     <children>
-        <VBox spacing="20" alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefWidth="760.0">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="657.0" prefWidth="1243.0" spacing="20">
             <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
+                <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="Salary Management" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Salary Management" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
 
             <!-- Input Form -->
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT"/>
-                    <ColumnConstraints prefWidth="300"/>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="Salary ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtSalaryId" promptText="SAL001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Label text="Salary ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtSalaryId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Employee ID:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Basic Salary:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtBasicSalary" promptText="50000.00" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <Label text="Basic Salary:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtBasicSalary" promptText="50000.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="OT Hours:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtOtHours" promptText="10" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                <Label text="OT Hours:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtOtHours" promptText="10" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Deduction:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtDeduction" promptText="3000" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <Label text="Deduction:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtDeduction" promptText="3000" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label text="Deduction Type:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtDeductionType" promptText="Tax / Loan" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+                <Label text="Deduction Type:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtDeductionType" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-                <Label text="Net Salary:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtNetSalary" promptText="Calculated" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+                <Label text="Net Salary:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="6">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtNetSalary" promptText="Calculated" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
 
             <!-- Buttons -->
-            <HBox spacing="15" alignment="CENTER">
-                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
-                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
-                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
-                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnClear" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
 
             <!-- Table View -->
             <TableView fx:id="tblSalary" prefHeight="250" prefWidth="750">
                 <columns>
-                    <TableColumn fx:id="colSalaryId" text="Salary ID" prefWidth="100"/>
-                    <TableColumn fx:id="colEmployeeId" text="Employee ID" prefWidth="100"/>
-                    <TableColumn fx:id="colBasicSalary" text="Basic Salary" prefWidth="100"/>
-                    <TableColumn fx:id="colOtHours" text="OT Hours" prefWidth="80"/>
-                    <TableColumn fx:id="colDeduction" text="Deduction" prefWidth="100"/>
-                    <TableColumn fx:id="colDeductionType" text="Deduction Type" prefWidth="120"/>
-                    <TableColumn fx:id="colNetSalary" text="Net Salary" prefWidth="120"/>
+                    <TableColumn fx:id="colSalaryId" prefWidth="156.66665267944336" text="Salary ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="128.6666717529297" text="Employee ID" />
+                    <TableColumn fx:id="colBasicSalary" prefWidth="150.66665649414062" text="Basic Salary" />
+                    <TableColumn fx:id="colOtHours" prefWidth="134.66668701171875" text="OT Hours" />
+                    <TableColumn fx:id="colDeduction" prefWidth="200.0" text="Deduction" />
+                    <TableColumn fx:id="colDeductionType" prefWidth="177.3333740234375" text="Deduction Type" />
+                    <TableColumn fx:id="colNetSalary" prefWidth="254.66668701171875" text="Net Salary" />
                 </columns>
             </TableView>
         </VBox>
