--- a/main/resources/view/Task.fxml
+++ b/main/resources/view/Task.fxml
@@ -1,61 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.TaskController"
-            prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="602.0" prefWidth="1176.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.TaskController">
 
     <children>
-        <VBox spacing="20" layoutX="20.0" layoutY="20.0" prefWidth="760.0">
+        <VBox layoutX="20.0" layoutY="20.0" prefHeight="582.0" prefWidth="1138.0" spacing="20">
             <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
+                <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="Task Management" style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Task Management" textFill="WHITE" />
 
-            <!-- Input Fields -->
+
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT"/>
-                    <ColumnConstraints prefWidth="300"/>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="Task ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtTaskId" promptText="T001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Label text="Task ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtTaskId" promptText="T001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Employee ID:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Description:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtDescription" promptText="Task details" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <Label text="Description:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtDescription" promptText="Task details" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="Deadline:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-                <DatePicker fx:id="dpDeadline" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                <Label text="Deadline:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <DatePicker fx:id="dpDeadline" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Status:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-                <ComboBox fx:id="cmbStatus" promptText="Pending / Done" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <Label text="Status:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <ComboBox fx:id="cmbStatus" promptText="Pending / Done" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
 
-            <!-- Buttons -->
-            <HBox spacing="15" alignment="CENTER">
-                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
-                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
-                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
-                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
 
-            <!-- Table -->
+
             <TableView fx:id="tblTask" prefHeight="250" prefWidth="750">
                 <columns>
-                    <TableColumn fx:id="colTaskId" text="Task ID" prefWidth="100"/>
-                    <TableColumn fx:id="colEmployeeId" text="Employee ID" prefWidth="100"/>
-                    <TableColumn fx:id="colDescription" text="Description" prefWidth="200"/>
-                    <TableColumn fx:id="colDeadline" text="Deadline" prefWidth="120"/>
-                    <TableColumn fx:id="colStatus" text="Status" prefWidth="120"/>
+                    <TableColumn fx:id="colTaskId" prefWidth="166.00000381469727" text="Task ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="184.0000457763672" text="Employee ID" />
+                    <TableColumn fx:id="colDescription" prefWidth="326.6667175292969" text="Description" />
+                    <TableColumn fx:id="colDeadline" prefWidth="218.6666259765625" text="Deadline" />
+                    <TableColumn fx:id="colStatus" prefWidth="202.00006103515625" text="Status" />
                 </columns>
             </TableView>
         </VBox>
