--- a/main/resources/view/User.fxml
+++ b/main/resources/view/User.fxml
@@ -1,61 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController"
-            prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="602.0" prefWidth="1049.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController">
 
     <children>
-        <VBox spacing="20" layoutX="20.0" layoutY="20.0" prefWidth="760.0">
+        <VBox layoutX="20.0" layoutY="20.0" prefHeight="582.0" prefWidth="1009.0" spacing="20">
             <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
+                <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="User Management" style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="User Management" textFill="WHITE" />
 
             <!-- Input Fields -->
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT"/>
-                    <ColumnConstraints prefWidth="300"/>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="User ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtUserId" promptText="U001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Label text="User ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtUserId" promptText="U001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="User Name:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtUserName" promptText="John Doe" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <Label text="User Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtUserName" promptText="John Doe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Mobile:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtMobile" promptText="07XXXXXXXX" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <Label text="Mobile:" textFill="#fbfbfb" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtMobile" promptText="07XXXXXXXX" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="Email:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtEmail" promptText="example@email.com" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Role:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-                <ComboBox fx:id="cmbRole" promptText="Admin / User / HR" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <Label text="Role:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <ComboBox fx:id="cmbRole" promptText="Admin / User / HR" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
 
             <!-- Buttons -->
-            <HBox spacing="15" alignment="CENTER">
-                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
-                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
-                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
-                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnreset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
 
             <!-- Table -->
             <TableView fx:id="tblUser" prefHeight="250" prefWidth="750">
                 <columns>
-                    <TableColumn fx:id="colUserId" text="User ID" prefWidth="100"/>
-                    <TableColumn fx:id="colUserName" text="User Name" prefWidth="150"/>
-                    <TableColumn fx:id="colMobile" text="Mobile" prefWidth="120"/>
-                    <TableColumn fx:id="colEmail" text="Email" prefWidth="200"/>
-                    <TableColumn fx:id="colRole" text="Role" prefWidth="100"/>
+                    <TableColumn fx:id="colUserId" prefWidth="127.33330917358398" text="User ID" />
+                    <TableColumn fx:id="colUserName" prefWidth="294.6667022705078" text="User Name" />
+                    <TableColumn fx:id="colMobile" prefWidth="190.0" text="Mobile" />
+                    <TableColumn fx:id="colEmail" prefWidth="182.0" text="Email" />
+                    <TableColumn fx:id="colRole" prefWidth="175.3333740234375" text="Role" />
                 </columns>
             </TableView>
         </VBox>
