--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -50,19 +50,19 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtBasicSalary" promptText="50000.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtBasicSalary" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                 <Label text="OT Hours:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtOtHours" promptText="10" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtOtHours" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                 <Label text="Deduction:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtDeduction" promptText="3000" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="txtDeduction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
                 <Label text="Deduction Type:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
                <font>
@@ -74,7 +74,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtNetSalary" promptText="Calculated" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <TextField fx:id="txtNetSalary" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
@@ -88,6 +88,11 @@
 
             <!-- Buttons -->
             <HBox alignment="CENTER" spacing="15">
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #a29bfe;" text="Add">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
