--- a/main/resources/view/User.fxml
+++ b/main/resources/view/User.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,14 +17,14 @@
 <AnchorPane prefHeight="602.0" prefWidth="1049.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.UserController">
 
     <children>
-        <VBox layoutX="20.0" layoutY="20.0" prefHeight="582.0" prefWidth="1009.0" spacing="20">
+        <VBox layoutX="20.0" layoutY="20.0" prefHeight="576.0" prefWidth="1009.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
             <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="User Management" textFill="WHITE" />
 
-            <!-- Input Fields -->
+
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" />
@@ -36,7 +35,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtUserId" promptText="U001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtUserId" prefHeight="25.0" prefWidth="338.0" promptText="U001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="User Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
@@ -48,7 +47,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtMobile" promptText="07XXXXXXXX" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtMobile" promptText="0700000000" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                 <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
                <font>
@@ -60,7 +59,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <ComboBox fx:id="cmbRole" promptText="Admin / User / HR" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtRole" promptText="admin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
@@ -70,8 +69,13 @@
             </rowConstraints>
             </GridPane>
 
-            <!-- Buttons -->
-            <HBox alignment="CENTER" spacing="15">
+
+            <HBox alignment="CENTER" prefHeight="25.0" prefWidth="952.0" spacing="15">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addOnAction" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #a29bfe;" text=" Add">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -90,7 +94,7 @@
                </font></Button>
             </HBox>
 
-            <!-- Table -->
+
             <TableView fx:id="tblUser" prefHeight="250" prefWidth="750">
                 <columns>
                     <TableColumn fx:id="colUserId" prefWidth="127.33330917358398" text="User ID" />
