--- a/main/resources/view/Attendance.fxml
+++ b/main/resources/view/Attendance.fxml
@@ -1,94 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController">
+<AnchorPane prefHeight="589.0" prefWidth="1156.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController">
     <children>
 
-        <Label layoutX="20" layoutY="20" text="Attendance Management" textFill="WHITE" style="-fx-font-size: 24px; -fx-font-weight: bold;">
+        <Label layoutX="20" layoutY="20" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Attendance Management" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="14.0"/>
+                <Font name="System Bold" size="14.0" />
             </font>
         </Label>
 
-        <GridPane layoutX="20" layoutY="70" hgap="20" vgap="15">
+        <GridPane hgap="20" layoutX="20" layoutY="70" vgap="15">
             <columnConstraints>
-                <ColumnConstraints minWidth="120.0"/>
-                <ColumnConstraints minWidth="200.0"/>
+                <ColumnConstraints minWidth="120.0" />
+                <ColumnConstraints minWidth="200.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="30.0"/>
-                <RowConstraints minHeight="30.0"/>
-                <RowConstraints minHeight="30.0"/>
-                <RowConstraints minHeight="30.0"/>
-                <RowConstraints minHeight="30.0"/>
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
+                <RowConstraints minHeight="30.0" />
             </rowConstraints>
             <children>
                 <Label text="Attendance ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-                    <font><Font name="System Bold" size="12.0"/></font>
+                    <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtAttendanceId" promptText="A001" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
                 <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-                    <font><Font name="System Bold" size="12.0"/></font>
+                    <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtEmployeeId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <TextField fx:id="txtEmployeeId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label text="Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-                    <font><Font name="System Bold" size="12.0"/></font>
+                    <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <DatePicker fx:id="datePicker" promptText="2025-04-01" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
                 <Label text="Check In Time:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-                    <font><Font name="System Bold" size="12.0"/></font>
+                    <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtCheckIn" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                <TextField fx:id="txtCheckIn" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                 <Label text="Check Out Time:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
-                    <font><Font name="System Bold" size="12.0"/></font>
+                    <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtCheckOut" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                <TextField fx:id="txtCheckOut" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="lblAttendanceId" prefHeight="17.0" prefWidth="221.0" text="1" textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtDate" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
         </GridPane>
 
         <Label layoutX="400.0" layoutY="254.0" text="Status:" textFill="WHITE">
-            <font><Font name="System Bold" size="12.0"/></font>
+            <font><Font name="System Bold" size="12.0" /></font>
         </Label>
-        <ComboBox fx:id="statusId" layoutX="455.0" layoutY="250.0" prefWidth="150.0"/>
 
-        <HBox layoutX="20" layoutY="300" spacing="15">
-            <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="80" style="-fx-background-color: #ffeaa7;" text="Save" textFill="#1b0000">
-                <font><Font name="System Bold" size="12.0"/></font>
+        <HBox layoutX="613.0" layoutY="300" prefHeight="25.0" prefWidth="561.0" spacing="15">
+            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="25.0" prefWidth="114.0" style="-fx-background-color: #ffeaa7;" text="Save" textFill="#1b0000">
+                <font><Font name="System Bold" size="12.0" /></font>
             </Button>
-            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="80" style="-fx-background-color: #00cec9;" text="Update">
-                <font><Font name="System Bold" size="12.0"/></font>
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="25.0" prefWidth="127.0" style="-fx-background-color: #00cec9;" text="Update">
+                <font><Font name="System Bold" size="12.0" /></font>
             </Button>
-            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="80" style="-fx-background-color: #ff7675;" text="Delete">
-                <font><Font name="System Bold" size="12.0"/></font>
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #ff7675;" text="Delete">
+                <font><Font name="System Bold" size="12.0" /></font>
             </Button>
-            <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="80" style="-fx-background-color: #b2bec3;" text="Reset">
-                <font><Font name="System Bold" size="12.0"/></font>
+            <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="25.0" prefWidth="132.0" style="-fx-background-color: #b2bec3;" text="Reset">
+                <font><Font name="System Bold" size="12.0" /></font>
             </Button>
         </HBox>
 
-        <TableView fx:id="tblAttendance" layoutX="28.0" layoutY="356.0" prefHeight="120.0" prefWidth="740.0">
+        <TableView fx:id="tblAttendance" layoutX="28.0" layoutY="356.0" onMouseClicked="#onClickTable" prefHeight="219.0" prefWidth="1109.0">
             <columns>
-                <TableColumn fx:id="colAttendanceId" prefWidth="150.0" text="Attendance ID"/>
-                <TableColumn fx:id="colEmployeeId" prefWidth="150.0" text="Employee ID"/>
-                <TableColumn fx:id="colDate" prefWidth="150.0" text="Date"/>
-                <TableColumn fx:id="colCheckIn" prefWidth="145.0" text="Check In"/>
-                <TableColumn fx:id="colCheckOut" prefWidth="145.0" text="Check Out"/>
+                <TableColumn fx:id="colAttendanceId" prefWidth="140.66665077209473" text="Attendance ID" />
+                <TableColumn fx:id="colEmployeeId" prefWidth="168.66673278808594" text="Employee ID" />
+                <TableColumn fx:id="colDate" prefWidth="175.99996948242188" text="Date" />
+                <TableColumn fx:id="colCheckIn" prefWidth="223.33331298828125" text="Check In" />
+                <TableColumn fx:id="colCheckOut" prefWidth="230.66668701171875" text="Check Out" />
+            <TableColumn fx:id="colStatus" prefWidth="167.9998779296875" text="Status" />
             </columns>
         </TableView>
 
-        <ImageView fitHeight="51.0" fitWidth="55.0" layoutX="725.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png"/>
+        <!--<ImageView fitHeight="51.0" fitWidth="55.0" layoutX="725.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+             <image>
+                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
             </image>
-        </ImageView>
+        </ImageView>-->
+      <TextField fx:id="txtStatus" layoutX="447.0" layoutY="250.0" promptText="Present/Absent" />
     </children>
 </AnchorPane>
